--- a/sass/0/_presets.scss
+++ b/sass/0/_presets.scss
@@ -1,6 +1,8 @@
 body {
   font-family: Roboto; // font-style: normal;
   /*не ясно, почему нет у элемента 1st, в TDs*/
+  // border-width: 1px;
+
 }
 img {
   display: block;
