--- a/sass/2_tablet/_bp_768.scss
+++ b/sass/2_tablet/_bp_768.scss
@@ -4,7 +4,7 @@
 
 //  был однажды упразднён
 
-@import "./0header";
+// @import "./0header";         //  упразднён
 @import "./1hero";
 @import "./2vertu";
 // @import "./3directions";     //  отсутстует в этой вёрстке
