--- a/sass/0/_0header_m_t.scss
+++ b/sass/0/_0header_m_t.scss
@@ -1,9 +1,14 @@
-//          Combo Header M & T
+//          0 Header
 
 .header .container {
-  // position: relative;
   height: 80px;
-  // padding:21px 0;
-  border-bottom: 1px solid #ececec; // maket by 
+  border-bottom: 1px solid #ececec; //maket by
 }
 
+.nav {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
