--- a/sass/0/_1hero_m_t.scss
+++ b/sass/0/_1hero_m_t.scss
@@ -1,33 +1,31 @@
-//  Combo Hero M & T
+//          0 Hero
 
+.hero {
+  padding: 118px 0;
+  background-repeat: no-repeat;
+  background-position: center top;
 
-// .hero {
-//   // width: 1600px;
-//   height: 400px;
-//   width: 480px;
-//   // margin: 0 auto 0 auto;
-//   background-image: linear-gradient(
-//       rgba(47, 48, 58, 0.4),
-//       rgba(47, 48, 58, 0.4)
-//     ),
-//     url(../images/mobile/img.jpg);
-//   background-repeat: no-repeat;
-  // background-size: cover;
-  // padding: 200px 0 200px;
+  & .container{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+  }
 
-  // @media screen and (min-width: 1200px){
-  //   width: 1600px;
-  //   background-image: linear-gradient(
-  //     rgba(47, 48, 58, 0.4),
-  //     rgba(47, 48, 58, 0.4)),
-  //   url(../images/desktop/img.jpg);
-  // }
-// }
-
-// .hero .container {
-//   // display: flex;
-//   // align-items: center;
-//   // flex-direction: column;
-//   // justify-content: center;
-//   // width: 100%;
-// }
+  &-title {
+    font-weight: 900;
+    font-size: 26px;
+    line-height: calc(42 / 26);
+    // 60/44 from DT
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
+  & .button {
+    // margin: 30px auto 0 auto;
+    margin-top: 30px;
+    color: #fff;
+    background-color: var(--accent-color);
+  }
+}
