--- a/sass/0/_4team_m_t.scss
+++ b/sass/0/_4team_m_t.scss
@@ -1,70 +1,56 @@
-//          Combo Team   M & T
+//          0 Team
 
 .team {
-  // width: 100%;
   background-color: #f5f4fa;
-  // padding: 94px 0;
   padding: 60px 0;
+
+  &-header {
+    margin-bottom: 30px;
+    font-weight: bold;  // 700
+    font-size: 28px; // 36px;
+    line-height: calc(33 / 28);
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+  }
+  &-item {
+    margin-top: 30px;
+    
+    padding-bottom: 24px;
+    background-color: #fff;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+  }
+  &-name {
+    margin-top: 30px;
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: calc(19 / 16);
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+  }
+  &-spec {
+    margin: 10px 0 16px;
+
+    font-weight: normal;
+    font-size: 16px;
+    line-height: calc(19 / 16);
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+  }
 }
 
-.team-header {
-  padding-bottom: 30px;
-  font-weight: bold;
-  font-size: 28px; // 36px;
-  line-height: calc(33 / 28); // 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--title-text-color);
-}
-.team-item {
-  // width: 270px;  DT
-
-  // outline: 1px solid violet;
-  // width: calc((100%-2*2*15)/2);
-  margin-top: 30px;
-  padding-bottom: 24px;
-  background-color: #fff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-.team-name {
-  margin-top: 30px;
-
-  font-weight: 500;
-  font-size: 16px;
-  line-height: calc(19 / 16);
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--title-text-color);
-}
-.team-spec {
-  margin: 10px 0 16px;
-  // margin-bottom: 16px;
-
-  font-weight: normal;
-  font-size: 16px;
-  line-height: calc(19 / 16);
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--primary-text-color);
-}
 .soc-links {
   display: flex;
-  // display: inline-flexbox;
-  display: inline-flexbox;
-
   justify-content: space-between;
   width: 206px;
 
   .team & {
-    // display: inline-flex;
-    // display: block;;
-    // margin: 0 0 30px 32px;
-    // margin-bottom: 30px;
-    // margin:0 auto 30px auto;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     fill: #afb1b8;
     border-radius: 50%;
   }
@@ -95,5 +81,17 @@
   .soc-list-link:focus & {
     fill: #fff;
     transition: fill var(--t-cubic);
+  }
+}
+@media screen and (min-width: 768px) {
+  .team {
+    &-list {
+      margin: -15px;
+      display: flex;
+      flex-wrap: wrap;
+    }
+    &-item{
+      margin: 15px;
+    }
   }
 }
