--- a/sass/0/_base.scss
+++ b/sass/0/_base.scss
@@ -1,21 +1,19 @@
 //          Base
 
-@import "./1variables";
-@import "./2presets";
-@import "./3utils";
-@import "./4components";
+@import "./variables";
+@import "./presets";
+@import "./utils";
+@import "./components";
 
-// @import "./menu_m_t"; //  упразднён
+                        //  menu_m_t  упразднён
 
 @import "./0header_m_t";
-// @import "./1hero_m_t";   //  упразднён
+@import "./1hero_m_t";
 @import "./2vertu_m_t";
-.direction {
-  display: none;
-} // @import "./3directions";
-@import "./4team_m_t"; // @import "./"
-@import "./5clients_m_t"; // @import "./"
-@import "./footer_m_t"; // @import "."
+  .direction {display: none;} // @import "./3directions";
+@import "./4team_m_t"; 
+@import "./5clients_m_t"; 
+@import "./footer_m_t"; 
 
 @import "./backdrop_modal";
 @import "./form"
