--- a/sass/0/_components.scss
+++ b/sass/0/_components.scss
@@ -1,8 +1,8 @@
 .logo{
   font-family: Raleway, sans-serif;
-  // font-weight: bold; // 700;
+  font-weight: bold; // 700; 
   font-size: 24px;
-  // line-height: calc(28/24); //31/26);
+  line-height: calc(28 / 24); //  31/26 - DT
   letter-spacing: 0.03em;
 }
 .part1 {
@@ -12,25 +12,25 @@
   color: var(--title-text-color); 
 }
 .button {
-  // outline: none;
   display: flex;
   align-items: center;
-
-  // box-sizing: border-box;
-
+  border-width: 0;
+  // padding: calc(10px - border-width) 32px;
+  // padding: calc(10px - 2px) calc(32px - 2px);
   padding: 10px 32px;
+
 
   font-weight: 700;
   font-size: 16px;
   line-height: calc(30 / 16);
- 
   text-align: center;
   letter-spacing: 0.06em;
-  // color: var(--title-text-color);
+
   color: var(--title-text-color);
   
   background: #f5f4fa;
   border-color: transparent;
+  // border-bottom-width: 4px;
   border-radius: 4px;
   cursor: pointer;
 
