--- a/sass/0/_footer_m_t.scss
+++ b/sass/0/_footer_m_t.scss
@@ -1,20 +1,33 @@
 //         Combi Footer M & T
 
-.footer address {
-  margin-top: 20px;
-  // outline: 1px solid tomato;
-}
+.footer {
+  padding: 60px 0;
+  background-color: #2f303a;
 
-.address-item{
+  & .part2 {
+    color: #fff;
+  }
+  & address {
+    margin-top: 20px;
+  }
+  &-tablet {
+    @media screen and (min-width: 768px) {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+}
+.address-item {
   font-weight: normal;
   font-size: 14px;
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-   // outline: 1px solid white;
 }
-.map-address{
+.map-address {
   color: #fff;
+
+  transition: color var(--t-cubic);
 }
 .join-box {
   margin-top: 60px;
@@ -29,45 +42,37 @@
   text-transform: uppercase;
   color: #fff;
 }
-.soc-links {
-  padding-top: 20px;
+.join-header {
+  display: block;
+  margin-bottom: 20px;
 }
 .soc-list-link {
   background-color: rgba(255, 255, 255, 0.1);
 }
 /* ------------------- ПОДПИСКА --------------------*/
-// .subscribe-email label {
-// margin-bottom: 20px;
-// display: block;
-// padding-bottom: 20px;
-// outline: 1px solid white;
-//   }
 .subscribe-email {
   margin-top: 60px;
   text-align: center;
-
-  // outline: 1px solid white;
 }
 .subscribe-email input {
   display: block;
   margin-top: 20px;
+  padding-left: 16px;
+
   width: 100%;
   height: 50px;
-  padding-left: 16px;
-  background-color: #2f303a;
-  border: none;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
 
   line-height: calc(20 / 16);
   color: #fff;
+  background-color: #2f303a;
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
 }
 .subscribe-email button {
   margin: 20px auto 0 auto;
-  // padding: 29px;
-  // padding-top: 10px;
-  // padding-bottom: 10px;
+  padding: 10px 29px;
   color: #fff;
   background-color: var(--accent-color);
 }
