--- a/sass/1_mobile/_0header.scss
+++ b/sass/1_mobile/_0header.scss
@@ -1,51 +1,18 @@
-//      Mobi Header   ! Закрыть фигурку
+//      Mobi Header
 
 @media screen and (max-width: 767px) {
-  .header{
-    position: relative;
+  .header {
     display: flex;
     justify-content: center;
-  }
-  .zero{
-    // display: none;
-    // position: relative;
-    height: 60px;
-    background-color: tomato;
-  }
-  .header .container {
-    // display: none;
-    // position: relative;
-    position: fixed;
-    // z-index: 100;
-    // min-width: 320px;
-    width: 100%;
-    height: 60px;
-    background: #fff;;
-    // transform: translateY(-100%) ;
 
-    border-bottom: 1px solid #ececec; // maket by
-    //  outline: 1px solid black;
+    & .container {
+      position: fixed;
+      height: 60px;
+      width: 100%;
+      background-color: #fff;
+    }
   }
-  .logo {
-    font-weight: bold; // 700;
-    line-height: calc(28 / 24); //31/26);
-    // outline: 1px solid black;
+  .zero {
+    height: 60px;
   }
-  // .header .logo {
-  .nav {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    //  outline: 1px solid teal;
-  }
-  // .header::after {
-  //   content: "";
-  //   width: 1600px;
-  //   height: 1px;
-  //   background-color: #ececec;
-  //   display: block;
-  //   margin: 0 auto auto;
-  // }
 }
