--- a/sass/2_tablet/_2vertu.scss
+++ b/sass/2_tablet/_2vertu.scss
@@ -1,28 +1,7 @@
-// Tablet Vertu ! закрыть скобку {
+// Tablet Vertu
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .vertu {
-    // padding: 94px 0;
-
-    &-list {
-      margin: -15px;
-      display: flex;
-      flex-wrap: wrap;
-
-      // outline: 1px solid black;
-    }
-
-    &-item {
-      // margin: var(--mci);
-      // width: calc((100% - 2 * 2 * var(--mci)) / 2);
-      margin: 15px;
+  .vertu-item {
       width: calc((100% - 2 * 2 * 15px) / 2);
-    }
-  }
-  .vertu .icon {
-    // margin-left: 142px;
-    margin: 25px 142px;
-    width: 70px;
-    height: 70px;
   }
 }
