--- a/sass/3_desktop/_1hero.scss
+++ b/sass/3_desktop/_1hero.scss
@@ -1,12 +1,8 @@
-@media screen and (min-width:$dt-res){
-.hero {
-  // width: $dt-res;
-  // 1600px;
-  // height: 600px;
-  padding: 200px 0;
-  margin: 0 auto 0 auto;
-  
-  @media screen and (min-device-pixel-ratio: 2),
+@media screen and (min-width: $dt-res) {
+  .hero {
+    padding: 200px 0;
+
+    @media screen and (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
       background-image: linear-gradient(
@@ -15,40 +11,17 @@
         ),
         url(../images/desktop/img@2x.jpg);
     }
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/desktop/img.jpg);
 
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../images/desktop/img.jpg);
-  background-repeat: no-repeat;
-  // background-size: cover;
+    background-size: 1600px 600px;
 
-  background-size: 1600px 600px;
-    background-position: center top;
-
-    // outline: 2px solid blueviolet;
-
-  
+    &-title {
+      font-size: 44px;
+      line-height: calc(60 / 44);
+    }
+  }
 }
-.hero .container {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-}
-.hero-title {
-  width: 696px;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: calc(60 / 44);
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: #ffffff;
-}
-.hero .button {
-    margin-top: 30px;  
-    color:#fff;
-    background-color: var(--accent-color);
-}}
