--- a/sass/3_desktop/_2vertu.scss
+++ b/sass/3_desktop/_2vertu.scss
@@ -1,47 +1,11 @@
+// DeskTop Vertu
+
 @media screen and (min-width: $dt-res) {
   .vertu {
     padding: 94px 0;
 
-    &-list {
-      display: flex;
+    &-item {
+      width: calc((100% - 4 * 2 * 15px) / 4);
     }
-
-    &-header {
-      margin-top: 30px;
-      font-weight: bold;
-      font-size: 14px;
-      line-height: calc(16 / 14);
-      letter-spacing: 0.03em;
-      text-transform: uppercase;
-      color: var(--title-text-color);
-    }
-
-    &-text {
-      margin-top: 10px;
-      font-weight: normal;
-      font-size: 14px;
-      line-height: calc(24 / 14);
-      letter-spacing: 0.03em;
-      color: var(--primary-text-color);
-    }
-  }
-  .vertu-item {
-    margin: 15px;
-    width: calc((100% - 4 * 2 * 15px) / 4);
-    //   width: 270px;
-    //   &:not(:last-child) {
-    //     margin-right: 30px;
-    //   }
-  }
-  .vertu .icon {
-    margin: 25px 100px;
-    width: 70px;
-    height: 70px;
-
-    // margin-left: 100px;
-  }
-  .icon-place {
-    /* display: block; */
-    background-color: #f5f4fa;
   }
 }
