--- a/sass/3_desktop/_3directions.scss
+++ b/sass/3_desktop/_3directions.scss
@@ -1,18 +1,19 @@
 @media screen and (min-width: $dt-res) {
   .direction {
     display: block;
-    margin: 0 0 94px;
-  }
-  .direction-list {
-    margin-top: 50px;
-    display: flex;
-    justify-content: space-between;
-  }
-  .direction-title {
-    font-size: 36px;
-    line-height: calc(42 / 36);
-    letter-spacing: 0.03em;
-    text-align: center;
+    margin-bottom: 94px;
+
+    &-list {
+      margin-top: 50px;
+      display: flex;
+      justify-content: space-between;
+    }
+    &-title {
+      font-size: 36px;
+      line-height: calc(42 / 36);
+      letter-spacing: 0.03em;
+      text-align: center;
+    }
   }
   .thumb {
     position: relative;
@@ -22,10 +23,12 @@
   .moir-content {
     position: absolute;
     bottom: 0;
-    left: 0;
+    // left: 0;
     width: 100%;
+    padding: 27px 0;
+
+    color: #ffffff;
     background: rgba(47, 48, 58, 0.8);
-    padding: 27px;
 
     font-weight: bold;
     font-size: 14px;
@@ -33,7 +36,5 @@
     text-align: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-
-    color: #ffffff;
   }
 }
