--- a/sass/3_desktop/_4components.scss
+++ b/sass/3_desktop/_4components.scss
@@ -1,7 +1,7 @@
-@media screen and (min-width: $dt-res) {
-  .logo {
-    font-size: 26px;
-    line-height: calc(31 / 26);
+// @media screen and (min-width: $dt-res) {
+//   .logo {
+//     font-size: 26px;
+//     line-height: calc(31 / 26);
      
-  }
-}
+//   }
+// }
