--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,15 @@
 $dt-res: 1200px;
+// высоты кнопок увеличивает бордер 
+
+// soc-link вынести в компоненты, что будут 
+// модифицироваться в зависимости от фона
+
+// не смог перебить толщину бордера кнопки
 
 @import "./0/base";
-// .header{display: none;}
 
 @import "./1_mobile/bp_640";
 
 @import "./2_tablet/bp_768";
 
-@import "./3_desktop/bp_1200"; 
+@import "./3_desktop/bp_1200";
